--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,12 +48,12 @@ steps:
       Write-Host "##vso[task.setvariable variable=Version]$version"
       Write-Host "##vso[build.updatebuildnumber]$version-$(Build.BuildId)"
 
-- task: NuGetCommand@2
-  inputs:
-    command: 'pack'
-    packagesToPack: '**/*.nuspec'
-    versioningScheme: 'byEnvVar'
-    versionEnvVar: 'Version'
+#- task: NuGetCommand@2
+#  inputs:
+#    command: 'pack'
+#    packagesToPack: '**/*.nuspec'
+#    versioningScheme: 'byEnvVar'
+#    versionEnvVar: 'Version'
 
 - task: PublishBuildArtifacts@1
   inputs:
