--- a/PochtaAPI/PochtaAPI.csproj
+++ b/PochtaAPI/PochtaAPI.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>Virenbar</Authors>
-    <PackageProjectUrl>https://github.com/Virenbar/PochtaAPI</PackageProjectUrl>
-    <PackageIcon>PochtaAPI.png</PackageIcon>
-    <Version>1.0.2</Version>
-    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <PackageId>Virenbar.PochtaAPI</PackageId>
-    <RepositoryUrl>https://github.com/Virenbar/PochtaAPI.git</RepositoryUrl>
+    <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
     <Description>Library for pochta.ru API</Description>
+    <Version>1.0.2</Version>
+    <Authors>Virenbar</Authors>
     <Copyright>Virenbar</Copyright>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/Virenbar/PochtaAPI.git</RepositoryUrl>
+    <PackageIcon>PochtaAPI.png</PackageIcon>
     <PackageIconUrl>https://raw.githubusercontent.com/Virenbar/PochtaAPI/master/PochtaAPI/Icon/PochtaAPI.png</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/Virenbar/PochtaAPI</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
@@ -24,8 +24,9 @@
   
   <ItemGroup>
     <PackageReference Include="RestSharp" Version="106.11.7" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
+    <PackageReference Include="MinVer" Version="2.5.0" PrivateAssets="All"/>
   </ItemGroup>
-  
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' ">
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.4.*" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.4.*" />
@@ -44,6 +45,18 @@
   <ItemGroup>
     <None Include="Icon\PochtaAPI.png" Pack="true" PackagePath="" />
   </ItemGroup>
-
+  
+  <PropertyGroup>
+    <MinVerTagPrefix>v</MinVerTagPrefix>
+    <MinVerDefaultPreReleasePhase>preview</MinVerDefaultPreReleasePhase>
+  </PropertyGroup>
+  
+  <Target Name="CustomVersion" AfterTargets="MinVer">
+    <PropertyGroup>
+      <MinVerDefaultPreReleasePhase>preview</MinVerDefaultPreReleasePhase>
+      <FileVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch)</FileVersion>
+      <AssemblyVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch)</AssemblyVersion>
+    </PropertyGroup>
+  </Target>
+  
 </Project>
-
