--- a/PochtaForm/App.config
+++ b/PochtaForm/App.config
@@ -17,7 +17,13 @@
                 <value>P</value>
             </setting>
             <setting name="LastTrack" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="Token" serializeAs="String">
+                <value>T</value>
+            </setting>
+            <setting name="Key" serializeAs="String">
+                <value>K</value>
             </setting>
         </PochtaForm.Properties.Settings>
     </userSettings>
