--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,9 +38,16 @@ steps:
 #    configuration: '$(buildConfiguration)'
 
 - task: PowerShell@2
-  displayName: 'SetVersion Script'
+  displayName: 'Version Script'
   inputs:
-    filePath: 'Azure/SetVersion.ps1'
+    targetType: 'inline'
+    script: |
+      $xml = [Xml] (Get-Content .\PochtaAPI\PochtaAPI.csproj)
+      $version = [string] $xml.Project.PropertyGroup.Version
+      $version = $version.trim() #WTF powershell is junk
+      Write-Host "Version: $version"
+      Write-Host "##vso[task.setvariable variable=Version]$version"
+      Write-Host "##vso[build.updatebuildnumber]$version-$(Build.BuildId)"
 
 - task: DotNetCoreCLI@2
   inputs:
