--- a/PochtaForm/PochtaForm.csproj
+++ b/PochtaForm/PochtaForm.csproj
@@ -65,6 +65,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormClassGen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormClassGen.Designer.cs">
+      <DependentUpon>FormClassGen.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <EmbeddedResource Include="FormClassGen.resx">
+      <DependentUpon>FormClassGen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
