--- a/PochtaAPI/PochtaAPI.csproj
+++ b/PochtaAPI/PochtaAPI.csproj
@@ -1,62 +1,63 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <PackageId>Virenbar.PochtaAPI</PackageId>
-    <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
-    <Description>Library for pochta.ru API</Description>
-    <Authors>Virenbar</Authors>
-    <Copyright>Virenbar</Copyright>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/Virenbar/PochtaAPI.git</RepositoryUrl>
-    <PackageIcon>PochtaAPI.png</PackageIcon>
-    <PackageIconUrl>https://raw.githubusercontent.com/Virenbar/PochtaAPI/master/PochtaAPI/Icon/PochtaAPI.png</PackageIconUrl>
-    <PackageProjectUrl>https://github.com/Virenbar/PochtaAPI</PackageProjectUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DebugType>embedded</DebugType>
-    <DebugSymbols>true</DebugSymbols>
-  </PropertyGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="MinVer" Version="2.5.0" PrivateAssets="All" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' ">
-    <PackageReference Include="System.ServiceModel.Duplex" Version="4.4.*" />
-    <PackageReference Include="System.ServiceModel.Http" Version="4.4.*" />
-    <PackageReference Include="System.ServiceModel.NetTcp" Version="4.4.*" />
-    <PackageReference Include="System.ServiceModel.Primitives" Version="4.4.*" />
-    <PackageReference Include="System.ServiceModel.Security" Version="4.4.*" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net452'">
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Net.Http" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <None Include="Icon\PochtaAPI.png" Pack="true" PackagePath="" />
-  </ItemGroup>
-  
-  <PropertyGroup>
-    <MinVerTagPrefix>v</MinVerTagPrefix>
-    <MinVerDefaultPreReleasePhase>preview</MinVerDefaultPreReleasePhase>
-  </PropertyGroup>
-  
-  <Target Name="CustomVersion" AfterTargets="MinVer">
     <PropertyGroup>
-      <MinVerDefaultPreReleasePhase>preview</MinVerDefaultPreReleasePhase>
-      <FileVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch)</FileVersion>
-      <AssemblyVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch)</AssemblyVersion>
+        <PackageId>Virenbar.PochtaAPI</PackageId>
+        <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
+        <Description>Library for pochta.ru API</Description>
+        <Authors>Virenbar</Authors>
+        <Copyright>Virenbar</Copyright>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/Virenbar/PochtaAPI.git</RepositoryUrl>
+        <PackageIcon>PochtaAPI.png</PackageIcon>
+        <PackageIconUrl>https://raw.githubusercontent.com/Virenbar/PochtaAPI/master/PochtaAPI/Icon/PochtaAPI.png</PackageIconUrl>
+        <PackageProjectUrl>https://github.com/Virenbar/PochtaAPI</PackageProjectUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
-  </Target>
-  
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+        <DebugType>embedded</DebugType>
+        <DebugSymbols>true</DebugSymbols>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+        <PackageReference Include="MinVer" Version="4.1.0" PrivateAssets="All" />
+    </ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' ">
+        <PackageReference Include="System.ServiceModel.Duplex" Version="4.9.*" />
+        <PackageReference Include="System.ServiceModel.Http" Version="4.9.*" />
+        <PackageReference Include="System.ServiceModel.NetTcp" Version="4.9.*" />
+        <PackageReference Include="System.ServiceModel.Primitives" Version="4.9.*" />
+        <PackageReference Include="System.ServiceModel.Security" Version="4.9.*" />
+    </ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'net452'">
+        <Reference Include="System.ServiceModel" />
+        <Reference Include="System.Net.Http" />
+        <Reference Include="System.Web"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <WCFMetadata Include="Connected Services" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="Icon\PochtaAPI.png" Pack="true" PackagePath="" />
+    </ItemGroup>
+
+    <PropertyGroup>
+        <MinVerTagPrefix>v</MinVerTagPrefix>
+        <MinVerDefaultPreReleasePhase>preview</MinVerDefaultPreReleasePhase>
+    </PropertyGroup>
+
+    <Target Name="CustomVersion" AfterTargets="MinVer">
+        <PropertyGroup>
+            <MinVerDefaultPreReleasePhase>preview</MinVerDefaultPreReleasePhase>
+            <FileVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch)</FileVersion>
+            <AssemblyVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch)</AssemblyVersion>
+        </PropertyGroup>
+    </Target>
+
 </Project>
