--- a/.github/workflows/publish-artifact.yml
+++ b/.github/workflows/publish-artifact.yml
@@ -4,7 +4,8 @@ on:
 jobs:
   build:
     name: Build
-    uses: Virenbar/PochtaAPI/.github/workflows/build-artifact.yml@master
+    uses: ./.github/workflows/build-artifact.yml
+
   publish:
     name: Publish
     runs-on: windows-latest
@@ -12,15 +13,14 @@ jobs:
     steps:
       - name: Setup MSBuild.exe
         uses: microsoft/setup-msbuild@v1.1
-        
+
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
           name: PochtaAPI
-        
+
       - name: LS
         run: ls -R
-        
+
       - name: Push NuGet
         run: nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGETKEY}}
-          
